@@ -237,7 +237,7 @@ def dependencies(target):
         ffmpeg_options = {}
 
     return (('ffmpeg-cdist', '1d4a1a4', ffmpeg_options),
-            ('libdcp', 'd46f968'),
+            ('libdcp', '4e2d5cc'),
             ('libsub', '067c21c'))
 
 def configure_options(target):
